@@ -2,6 +2,12 @@
  * $Id$
  */
 
+2009-09-15 23:54 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
+  * src/common/wxhfuncs.prg
+  * src/wxbase/sizers/wx_FlexGridSizer.cpp
+    ! Fixed bug on parameter for AddGrowable[Row/Col] to be 1 based index
+      (Harbour compatible) instead of zero based (wxWidgets C++ mode)
+
 2009-09-15 18:57 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
   * src/raddox/TTable.prg
     ! Fixed OnBeforeInsert/OnAfterInsert return values
